// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render with default styles 1`] = `
<div
  class="mocked-styled-0 cui-c1brw169"
  style="--cui-nwag44: 16px 24px;"
/>
`;

exports[`Card > should render with giga spacing styles 1`] = `
<div
  class="mocked-styled-0 cui-c1brw169"
  spacing="giga"
  style="--cui-nwag44: 16px 24px;"
/>
`;

exports[`Card > should render with mega spacing styles 1`] = `
<div
  class="mocked-styled-0 cui-c1brw169"
  spacing="mega"
  style="--cui-nwag44: 16px 16px;"
/>
`;
